fixed mobile spacing

--- a/src/sass_modules/music.scss
+++ b/src/sass_modules/music.scss
@@ -1,6 +1,6 @@
 .music {
   .content {
-    padding: 3% 0 4%;
+    padding: 3% 0 150px;
     .title {
       font-weight: bold;
       font-size: 24px;
